test/parser/Queries/syntax_errors/fail_K-ForExprWithout-42.xq
(:* ne *************** let **** $ *************** for ****** let **foo******** ne *
(: Test: K-ForExprWithout-42    foo                 where         :
(: Written by: Frans Englich        ne    $           where          :)
(: Date: 2006-10-05T18:29:37+02:00     let   eq     let      foo         :)
 for (: Purpose: Variable which is not in    ne         $     :)(:********* $ ************* $ ** for ********** eq  let *********foo*******:)
for $ in ne  (1, 2), $b in (1, 2), ne  $c in (1, 2) $  return 1, where  $a